<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/app_name"
            android:textSize="45sp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edit_connect_username"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/hint_username_connect"
        android:singleLine="true"/>

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"
        style="?android:attr/borderlessButtonStyle"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbar_connect_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>